crates/ee-tests/src/snapshots/revm_ee_tests__revm_tests__selfdestruct_multi_tx@account_ext.snap
---
source: crates/ee-tests/src/revm_tests.rs
expression: "&(result1, result2, output)"
---
[
  {
    "Success": {
      "reason": "SelfDestruct",
      "gas": {
        "gas_spent": 53603,
        "state_gas_spent": 0,
        "gas_refunded": 24000,
        "floor_gas": 0
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 21000,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 0
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "0x0000000000000000000000000000000000000000": {
      "info": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "code": {
          "LegacyAnalyzed": {
            "bytecode": "0x00",
            "original_len": 0,
            "jump_table": {
              "order": "bitvec::order::Lsb0",
              "head": {
                "width": 8,
                "index": 0
              },
              "bits": 0,
              "data": []
            }
          }
        },
        "extension": "0x"
      },
      "transaction_id": 1,
      "storage": {},
      "status": "Touched | LoadedAsNotExisting",
      "original_info": null
    },
    "0x000000000000000000000000000000000000ffff": {
      "info": {
        "balance": "0x2386f26fc10000",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "code": {
          "LegacyAnalyzed": {
            "bytecode": "0x00",
            "original_len": 0,
            "jump_table": {
              "order": "bitvec::order::Lsb0",
              "head": {
                "width": 8,
                "index": 0
              },
              "bits": 0,
              "data": []
            }
          }
        },
        "extension": "0x"
      },
      "transaction_id": 0,
      "storage": {},
      "status": "Touched | LoadedAsNotExisting",
      "original_info": null
    },
    "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee": {
      "info": {
        "balance": "0x2386f26fc10000",
        "nonce": 2,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "code": {
          "LegacyAnalyzed": {
            "bytecode": "0x00",
            "original_len": 0,
            "jump_table": {
              "order": "bitvec::order::Lsb0",
              "head": {
                "width": 8,
                "index": 0
              },
              "bits": 0,
              "data": []
            }
          }
        },
        "extension": "0x"
      },
      "transaction_id": 1,
      "storage": {},
      "status": "Touched",
      "original_info": {
        "balance": "0x2386f26fc10000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "code": {
          "LegacyAnalyzed": {
            "bytecode": "0x00",
            "original_len": 0,
            "jump_table": {
              "order": "bitvec::order::Lsb0",
              "head": {
                "width": 8,
                "index": 0
              },
              "bits": 0,
              "data": []
            }
          }
        },
        "extension": "0x"
      }
    },
    "0xffffffffffffffffffffffffffffffffffffffff": {
      "info": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "code": {
          "LegacyAnalyzed": {
            "bytecode": "0x00",
            "original_len": 0,
            "jump_table": {
              "order": "bitvec::order::Lsb0",
              "head": {
                "width": 8,
                "index": 0
              },
              "bits": 0,
              "data": []
            }
          }
        },
        "extension": "0x"
      },
      "transaction_id": 1,
      "storage": {},
      "status": "SelfDestructed | Touched",
      "original_info": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "code": {
          "LegacyAnalyzed": {
            "bytecode": "0x00",
            "original_len": 0,
            "jump_table": {
              "order": "bitvec::order::Lsb0",
              "head": {
                "width": 8,
                "index": 0
              },
              "bits": 0,
              "data": []
            }
          }
        },
        "extension": "0x"
      }
    }
  }
]
