crates/ee-tests/src/snapshots/revm_ee_tests__revm_tests__test_frame_stack_index.snap
---
source: crates/ee-tests/src/revm_tests.rs
expression: result1
---
{
  "Success": {
    "reason": "Stop",
    "gas": {
      "limit": 1000000000,
      "gas_spent": 21000,
      "gas_refunded": 0,
      "floor_gas": 0,
      "intrinsic_gas": 21000
    },
    "logs": [],
    "output": {
      "Call": "0x"
    }
  }
}
